added graphviz package

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ numpy~=1.22.3
 joblib~=1.1.0
 streamlit~=1.10.0
 pyro-ppl~=1.8
-numpyro~=0.9.1
+numpyro[cpu]~=0.9.1
 jax~=0.3.2
 arviz~=0.12.1
 bokeh~=2.4.1
