started implementing experiments

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-pandas==1.4.0
-seaborn==0.11.2
-fuzzingbook==0.9.5
-graphviz==0.19.1
-networkx==2.6.0
-scikit-learn==1.0.2
-Markdown==3.3.6
-numpy~=1.22.3
-joblib~=1.1.0
-streamlit~=1.13.0
-pyro-ppl~=1.8
-numpyro[cpu]~=0.9.1
-jax~=0.3.2
-arviz~=0.12.1
-bokeh~=2.4.1
-git+https://github.com/smba/pycosa-toolbox.git@main#egg=pycosa
+pandas
+seaborn
+graphviz
+networkx
+scikit-learn
+Markdown
+numpy
+joblib
+streamlit
+pyro-ppl
+numpyro[cpu]
+jax
+arviz
+bokeh
+absl-py
+pycosa @ git+https://github.com/smba/pycosa-toolbox@6a3632c448003347c203187dc94a15819ed46875
