parallelized evaluation in separate step and then decided to evaluate during main experiment because storing all mcmc predictive samples was huge data

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,6 @@ jax
 arviz
 bokeh
 absl-py
+pyarrow
+dask[complete]
 pycosa @ git+https://github.com/smba/pycosa-toolbox@6a3632c448003347c203187dc94a15819ed46875
