migrated to mlflow

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,11 @@ numpy==1.25.0
 joblib
 streamlit==1.24.0
 pyro-ppl
-numpyro[cpu]
-jax==0.4.13
+numpyro[cpu]==0.12.1
+jax==0.4.14
 arviz
 bokeh
 absl-py
 pyarrow
-dask[complete]
-pycosa@ git+https://github.com/smba/pycosa-toolbox@6a3632c448003347c203187dc94a15819ed46875
+pycosa@git+https://github.com/smba/pycosa-toolbox@6a3632c448003347c203187dc94a15819ed46875
+mlflow
