--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,46 @@
+# Data analysis & plotting
 pandas
-matplotlib~=3.7.1
-seaborn~=0.13.1
+matplotlib==3.7.1              # Safe version compatible with numpy < 2
+seaborn==0.13.1                # Matches matplotlib 3.7.x well
 graphviz
-networkx
-scikit-learn
-Markdown
-numpy==1.25.0
-joblib
-streamlit==1.30.0
-pyro-ppl
-numpyro[cpu]==0.12.1
-jax==0.4.14
-jaxlib==0.4.14
-shortuuid==1.0.13
-arviz
+networkx                       # Listed twice before, only keep once
 bokeh
-absl-py
+arviz                          # For probabilistic visualization (NumPyro-compatible)
 pyarrow
-pycosa@git+https://github.com/smba/pycosa-toolbox@6a3632c448003347c203187dc94a15819ed46875#egg=pycosa
-mlflow
-boto3
-black==23.7.0
-typing-extensions==4.10.0
-tensorflow[and-cuda]==2.13.1
-torch==2.1
-tensorrt==10.0.1
-openpyxl==3.1.2
-scipy<=1.12.0,>=1.6.0
-doepy==0.0.1
-imbalanced_learn==0.12.0
-pymoo==0.6.0.1
-networkx
+openpyxl==3.1.2                # For Excel export (used by pandas)
+
+# Machine Learning & Statistics
+#scikit-learn==1.3.2            # Latest version before numpy 2 support (1.4+ requires numpy >=2)
+scikit-learn==1.2.2
+imbalanced_learn==0.12.0       # Needs sklearn <1.4 to avoid breaking changes
+doepy>=0.0.1                   # Design of experiments
+pymoo>=0.6.0.1                 # Multi-objective optimization
+joblib                         # Model serialization, used by sklearn and others
+tensorflow[and-cuda]==2.13.1   # Compatible with Python 3.10, still widely supported
+#torch==2.1.2                   # Compatible with TF 2.13, avoids known ABI issues
+torch==2.1.0
+tensorrt==10.0.1               # Make sure your platform supports this version
+
+# NumPyro + JAX stack (carefully versioned!)
+#numpy==1.26.4                  # Last version before numpy 2.0 (critical for compatibility)
+numpy==1.24.3
+scipy==1.11.4                  # Safe with jax.scipy
+jax==0.4.20                    # Works well with numpyro==0.12.1 and ml_dtypes==0.2.0
+jaxlib==0.4.20                 # Must match jax version
+ml_dtypes==0.2.0               # Last version with a binary wheel for Python 3.10, no build required
+numpyro==0.12.1                # Stable version compatible with jax 0.4.20
+pyro-ppl                      # Required by some numpyro workflows (optional if unused)
+
+# Other useful packages
+Markdown                       # For rendering markdown (e.g. in Streamlit)
+streamlit>=1.30.0              # UI framework for demos, dashboards etc.
+absl-py                        # Logging utilities (used by TF, JAX etc.)
+shortuuid==1.0.13              # For nice short ID generation
+mlflow                         # Experiment tracking
+boto3                          # AWS access
+black==23.7.0                  # Code formatting (stable version)
+#typing-extensions==4.10.0      # For compatibility with older typing APIs
+typing-extensions==4.5.0
+
+# Special dependency from GitHub (locked commit)
+pycosa @ git+https://github.com/smba/pycosa-toolbox@6a3632c448003347c203187dc94a15819ed46875#egg=pycosa
